--- a/css/style.css
+++ b/css/style.css
@@ -7975,7 +7975,7 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  font-family: "Work Sans", Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: #fff;
   font-size: 17px;
   line-height: 1.8;
@@ -7986,6 +7986,20 @@ body {
     position: fixed;
     height: 100%;
     width: 100%; }
+
+.whatsapp {
+  position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
 
 a {
   -webkit-transition: .3s all ease;
@@ -8011,11 +8025,15 @@ h1, h2, h3, h4, h5,
   color: #5D50C6
 }
 
+.historia {
+  font-size: 25px;
+}
+
 .text-primary {
   color: #1eaaf1 !important; }
 
 .topper {
-  font-size: 20px;
+  font-size: 18px;
   width: 100%;
   display: block; }
   @media (max-width: 767.98px) {
@@ -8032,7 +8050,7 @@ h1, h2, h3, h4, h5,
       color: #fff; }
   .topper .text {
     width: calc(100% - 30px);
-    color: rgba(255, 255, 255, 0.7); }
+    color: white }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -8113,9 +8131,9 @@ h1, h2, h3, h4, h5,
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
         color: #fff;
-        background: #1eaaf1; } }
+        background: #000000; } }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color:  #002699; }
+    color:  #000000; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.active > a {
         color: #fff; } }
@@ -8139,7 +8157,7 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #1eaaf1 !important; }
+      color: #000000 !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
       background: #1eaaf1;
@@ -8188,6 +8206,7 @@ h1, h2, h3, h4, h5,
       color: #002699; }
 
 .navbar-brand {
+  font-family: 'Fredoka One', cursive;
   font-weight: 900;
   font-size: 24px;
   padding: 0;
@@ -8544,7 +8563,7 @@ h1, h2, h3, h4, h5,
         font-size: 50px;
         color: #1eaaf1; }
     .ftco-services .services .media-body {
-      color: rgba(255, 255, 255, 0.8); }
+      color: rgb(255, 255, 255); }
       @media (max-width: 767.98px) {
         .ftco-services .services .media-body {
           padding-bottom: 3.5em !important; } }
@@ -9361,7 +9380,7 @@ textarea.form-control {
     line-height: 1.5;
     margin-bottom: 15px; }
   .block-23 ul li span {
-    color: rgba(255, 255, 255, 0.7); }
+    color: rgba(255, 255, 255, 0.899); }
   .block-23 ul li .icon, .block-23 ul li .text {
     display: table-cell;
     vertical-align: top; }
